# recipe-manager

./: .env.example  .gitignore  AGENTS.md  CODEX-UI-UX-START.md  Makefile  README.md  SKILLS-INSTALLATION.md  docker-compose.yml  skills-lock.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260625_0001_initial.py  20260626_0002_source_tree.py  20260626_0003_recipe_source_deleted_status.py  20260627_0004_background_jobs.py  20260628_0005_user_settings.py  20260628_0006_tag_soft_delete.py  20260629_0007_ingredient_search_name.py  20260629_0008_recipe_search_text.py  20260702_0009_recipe_embeddings.py  20260703_0010_embedding_events.py  20260705_0011_remove_conflicting_resource_status.py  20260705_0012_import_job_error_code_enum.py  20260707_0013_import_event_type_enum.py  20260707_0014_notification_type_enums.py  20260708_0015_add_import_failed_job_error_code.py  20260710_0016_recipe_cover_image_fk.py  20260710_0017_embedding_lifecycle_enums.py  20260710_0018_remove_import_creation_error_code.py  20260710_0019_add_import_attempt_count.py  20260711_0020_secondary_resource_failure_event.py  20260712_0021_import_job_recipe_set_null.py  20260712_0022_add_user_roles.py  20260713_0023_user_clerk_identity.py  20260714_0024_generic_auth_identity.py  20260714_0025_uppercase_user_enums.py  (+5 more)
backend/app/: main.py  worker.py
backend/app/ai/: prompt.py  (+5 more)
backend/config/: preview-users.example.toml
backend/recipe_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_worker.py
(+558 files in other folders)
